--- a/src/components/add/add.css
+++ b/src/components/add/add.css
@@ -11,4 +11,18 @@
     font-size: 36px;
     font-weight: bold;
     margin-top: 55px;
+    transition: .8s;
+}
+
+.search-container__adding:hover {
+    transform: rotate(360deg);
+    cursor: pointer;
+}
+
+@media screen and (max-width: 856px){
+    .search-container__adding {
+        width: 35px;
+        height: 35px;
+        font-size: 28px;
+    }
 }
