--- a/src/components/allRecipes/allRecipes.css
+++ b/src/components/allRecipes/allRecipes.css
@@ -7,4 +7,10 @@
 .recipes-link {
     color: #D13CA4;
     font-size: 18px;
+    text-decoration: none;
+    transition: .2s;
+}
+
+.recipes-link:hover {
+    transform: rotate(5deg) scale(101%); 
 }
