--- a/src/components/hamburger/hamburger.css
+++ b/src/components/hamburger/hamburger.css
@@ -1,5 +1,10 @@
 .hamburger {
     width: 50px;
+    transition: .5s;
+}
+
+.hamburger:hover {
+    cursor: pointer;
 }
 
 .hamburger__line {
@@ -9,14 +14,48 @@
     margin-bottom: 8px;
     background: #000;
     border-radius: 5px;
+    transition: .8s;
 }
 
 .hamburger__line:last-child {
     margin-bottom: 0;
 }
 
+.hamburger_active {
+    transform: translateY(150%) rotate(-90deg);
+}
+
+.hamburger_active:hover {
+    transform: translateY(100%) rotate(-90deg);
+    cursor: pointer;
+}
+
+.hamburger_active .hamburger__line:first-child {
+    transform: rotate(45deg) translate(17px, -22px);
+    width: 50%;
+    margin-bottom: 0;
+}
+
+.hamburger_active .hamburger__line:nth-child(2n) {
+    margin-bottom: 0;
+}
+
+.hamburger_active .hamburger__line:last-child {
+    transform: rotate(-45deg) translate(17px, 22px);
+    width: 50%;
+}
+
 @media screen and (max-width: 856px) {
     .hamburger {
         width: 35px;
+    }
+
+    .hamburger_active .hamburger__line:first-child {
+        transform: rotate(45deg) translate(11px, -14px);
+        margin-bottom: 0;
+    }
+    
+    .hamburger_active .hamburger__line:last-child {
+        transform: rotate(-45deg) translate(11px, 14px);
     }
 }
