--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -19,9 +19,5 @@ body, html {
     justify-content: center;
     align-items: center;
     animation: appAppearance 0.8s ease;
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
+    height: 100vh;
 }
