--- a/src/components/input/input.css
+++ b/src/components/input/input.css
@@ -1,7 +1,24 @@
+@keyframes inputAppearance {
+    from {
+        opacity: 0;
+        transform: translateX(-100%);
+    }
+
+    to {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
 .input-wrapper {
     display: flex;
     align-items: center;
     margin-bottom: 20px;
+    animation: inputAppearance 1s ease;
+}
+
+.input-wrapper:first-child {
+    animation: none;
 }
 
 .input-wrapper__button {
