--- a/src/components/banner/banner.css
+++ b/src/components/banner/banner.css
@@ -142,3 +142,58 @@
     width: 100%;
     z-index: 1;
 }
+
+@media screen and (max-width: 991px) {
+    .banner__post-title {
+        width: 600px;
+        font-size: 72px;
+    }
+}
+
+@media screen and (max-width: 756px) {
+    .banner__post-title {
+        width: 500px;
+        font-size: 60px;
+    }
+}
+
+@media screen and (max-width: 680px) {
+    .banner__post-title {
+        width: 400px;
+        font-size: 48px;
+    }
+}
+
+@media screen and (max-width: 576px) {
+    .banner__post-title {
+        width: 350px;
+        font-size: 42px;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .banner__post {
+        padding: 10px 50px;
+    }
+
+    .banner__post-title {
+        width: 9em;
+        font-size: 42px;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .banner__post {
+        padding: 10px 20px;
+    }
+
+    .banner__post-title {
+        width: 9em;
+        font-size: 35px;
+    }
+
+    .banner__next {
+        right: 50px;
+        bottom: 60px;
+    }
+}
